<resources>
    <string name="app_name">CarTravel</string>
    <string name="action_settings">Settings</string>
    <string name="act_profil">Mon profil</string>
    <string name="act_compte">Mon compte</string>
    <string name="act_Parcour">Parcours</string>
    <string name="title_un_parcours">Un Parcours</string>
    <string name="title_les_parcours">Les Parcours</string>
    <string name="menu_icons_subtext">Icône du menu</string>
    <string name="drawer_open">Ouverture du menu gauche</string>
    <string name="drawer_close">Fermeture du menu gauche</string>
    <string-array name="menu_items">
        <item>Accueil</item>
        <item>Covoiturage</item>
        <item>Mon compte</item>
        <item>Mon profil</item>
        <item>Déconnexion</item>
    </string-array>
    <string name="frag_parcour">Parcours</string>
    <string name="frag_passager">Passagers</string>
    <string name="frag_conducteur">Conducteurs</string>
    <string name="frag_mes_parcour">Mes parcours</string>
    <string name="passagers_pot">Liste des passagers potentiels</string>
    <string name="passagers">Liste de mes passagers</string>
    <string name="conducteurs_pot">Liste des conducteurs potentiels</string>
    <string name="conducteurs">Liste de mes conducteurs</string>
    <string name="lst_passagers_pot_vide">La liste des passagers potentiels est vide</string>
    <string name="lst_passagers_vide">La liste de vos passagers est vide</string>
    <string name="lst_conducteurs_pot_vide">La liste des conducteurs potentiels est vide</string>
    <string name="lst_conducteurs_vide">La liste de vos conducteurs est vide</string>
    <string name="demande_conducteurs">Liste de mes demandes de conducteur</string>
    <string name="lst_demande_conducteurs_vide">La liste de vos demandes de conducteur est vide</string>
    <string name="demande_passagers">Liste de mes demandes de passagers</string>
    <string name="lst_demande_passagers_vide">La liste de vos demandes de passagers est vide</string>
    <string name="mes_offres">Mes offres</string>
    <string name="lst_offres_vide">Vous n\'avez fait aucune offre</string>
    <string name="mes_demandes">Mes demandes</string>
    <string name="lst_demandes_vide">Vous n\'avez fait aucune demande</string>
    <string name="lbl_depart">Adresse de départ :</string>
    <string name="lbl_arrive">Adresse d\'arrivée :</string>
    <string name="chk_adr_profil">Même adresse que profil</string>
    <string name="txt_num_civique">Num. Civique</string>
    <string name="txt_rue">Rue</string>
    <string name="txt_ville">Ville</string>
    <string name="txt_code_postal">Code Postal</string>
    <string name="lbl_proprietaire">Demandeur:</string>
    <string name="lbl_conducteur">Conducteur:</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_place_passagers">Nbr. de passagers:</string>
    <string name="lbl_place_dispo">Nbr. de place total:</string>
    <string name="lbl_place_prise">Nbr. de place prise:</string>
    <string name="lbl_distance_sup_max">Distance sup. Max:</string>
    <string name="lbl_adresse_depart">Adresse de départ</string>
    <string name="lbl_adresse">Adresse:</string>
    <string name="lbl_code_postal">Code postal:</string>
    <string name="lbl_adresse_arrive">Adresse d\'arrivé</string>
    <string name="btnConducteur">Devenir conducteur</string>
    <string name="btnPassagers">Devenir passager</string>
    <string name="lbl_username">Courriel</string>
    <string name="lbl_username2">Courriel :</string>
    <string name="lbl_confirmer_username">Confirmation du courriel</string>
    <string name="lbl_confirmer_username2">Confirmation du courriel :</string>
    <string name="lbl_pseudo">Pseudo</string>
    <string name="lbl_pseudo2">Pseudo :</string>
    <string name="lbl_password">Mot de passe</string>
    <string name="lbl_password2">Mot de passe :</string>
    <string name="lbl_confirmer_password">Confirmation du mot de passe</string>
    <string name="lbl_confirmer_password2">Confirmation du mot de passe :</string>
    <string name="btn_connexion">Connexion</string>
    <string name="lbl_creer_compte"><u>Créer un compte</u></string>
    <string name="lbl_forgot_password"><u>Mot de passe oublié?</u></string>
    <string name="toast_courriel_vide">Le champ courriel ne peut être vide.</string>
    <string name="toast_pseudo_vide">Le champ pseudo ne peut être vide.</string>
    <string name="toast_mdp_vide">Le champ mot de passe ne peut être vide.</string>
    <string name="toast_courriel_invalide">Le champ courriel est invalide.</string>
    <string name="toast_courriel_identique">Les courriels ne sont pas identiques.</string>
    <string name="toast_mdp_identique">Les mots de passes ne sont pas identiques.</string>
    <string name="toast_compte_creer">Votre compte a été créé.</string>
    <string name="toast_erreur_creation_compte">Erreur lors de la création du compte.</string>
    <string name="toast_erreur_connexion">Erreur lors de la connexion au compte.</string>
    <string name="toast_modif_compte">Le compte a été modifié avec succès.</string>
    <string name="toast_annul_modif">Aucune modification n\'a été faite.</string>
    <string name="toast_courriel_confirm_vide">Veillez resaisir le courriel pour sa modification.</string>
    <string name="toast_mdp_confirm_vide">Veillez resaisir le mot de passe pour sa modification.</string>
    <string name="toast_rue_invalide">Le champ rue est invalide.</string>
    <string name="toast_ville_invalide">Le champ ville est invalide.</string>
    <string name="btn_creer_compte"><u>Créer le compte</u></string>
    <string name="title_compte">Compte</string>
    <string name="title_modif_compte">Modification du compte</string>
    <string name="action_modifier_compte">Modifier le compte</string>
    <string name="action_sauvegarder_compte">Sauvegarder les modifications</string>
    <string name="avertissement_compte_modifier">Compte modifier</string>
    <string name="erreur_compte_modifier">Erreur lors de la modification</string>
	<string name="compte_existant_courriel">Un compte est déjà associé à ce courriel.</string>
	<string name="pseudo_non_disponible">Un autre compte utilise déjà ce pseudo.</string>
    <string name="aucun_compte_existant">Aucun compte n\'est rattaché ce courriel, veillez en créer un.</string>
    <string name="lbl_num_civ">Num. civique :</string>
    <string name="lbl_rue">Rue :</string>
    <string name="lbl_ville">Ville :</string>
    <string name="lbl_num_tel">Num. téléphone :</string>
    <string name="lbl_cod_post">Code postal :</string>
    <string name="lbl_voiture">Possède une voiture :</string>
    <string name="rtingBar_pass">Passager: </string>
    <string name="rtingBar_cond">Conducteur: </string>
    <string name="title_profil">Profil</string>
    <string name="title_modif_profil">Modification du profil</string>
    <string name="action_modifier_profil">Modifier le profil</string>
    <string name="action_sauvegarder_profil">Sauvegarder le profil</string>
    <string name="toast_num_civique_vide">Le champ du numéro civique ne peut être vide.</string>
    <string name="toast_rue_vide">Le champ rue ne peut être vide.</string>
    <string name="toast_ville_vide">Le champ ville ne peut être vide.</string>
    <string name="toast_code_postal_vide">Le champ code postal ne peut être vide.</string>
    <string name="toast_code_postal_confirm">Le code postal n\'est pas valide.</string>
    <string name="toast_num_tel_confirm">Le numéro de téléphone n\'est pas valide.</string>
    <string name="toast_erreur_creation_profil">Erreur lors de la modif du profil</string>
    <string name="lbl_choix_cov">Choix de covoiturage :</string>
    <string name="chck_pass">Passager</string>
    <string name="chck_cond">Conducteur</string>
    <string name="lbl_opt">Heure, date et fréquence :</string>
    <string name="lbl_info_pass">Informations passager :</string>
    <string name="lbl_nbr_pass">Nombre de passagers</string>
    <string name="lbl_info_cond">Informations conducteur :</string>
    <string name="lbl_plac_dispo">Nombre de places disponibles</string>
    <string name="lbl_dist_max">Nombre de Km max.</string>
    <string name="lbl_dep">Départ :</string>
    <string name="chk_info_prof">Même adresse que profil</string>
    <string name="lbl_dest">Destination :</string>
    <string name="lbl_date_heure">Date et heure</string>
    <string name="lbl_h">h</string>
    <string name="lbl_type_parcour">Type du parcours</string>
    <string name="action_confirmer_parcour">Confirmer</string>
    <string name="action_ajout_parcours">Créer un parcours</string>
    <string name="hint_date">JJ/MM/AAAA</string>
    <string name="lbl_nbr_passager">Nombre de passagers</string>
    <string name="lbl_capacite_max">Nombre de passagers max.</string>
    <string name="lbl_distance_max">Distance max.</string>
    <string name="toast_ajout_parcours">Le parcours a été ajouté avec succès.</string>
    <string name="toast_jour_vide">Veillez saisir une date.</string>
    <string name="toast_jour_invalide">La date saisie est invalide.</string>
    <string name="toast_minute_vide">Le champ minute doit être rempli.</string>
    <string name="toast_minute_invalide">Le champ minute est invalide.</string>
    <string name="toast_heure_vide">Le champ heure doit être rempli.</string>
    <string name="toast_heure_invalide">L\'heure saisie n\'est pas valide.</string>
    <string name="toast_nbr_pass_vide">Veillez saisir un nombre de passagers.</string>
    <string name="toast_nbr_pass_invalide">Le nombre de passagers saisi est invalide.</string>
    <string name="toast_nbr_pass_max_vide">Veillez saisir un nombre de passagers maximal.</string>
    <string name="toast_nbr_pass_max_invalide">Le nombre de passagers maximal saisi est invalide.</string>
    <string name="toast_dist_max_vide">Veillez saisir une distance de parcours maximale.</string>
    <string name="toast_dist_max_invalide">La distance maximale saisie est invalide.</string>
    <string name="toast_num_civ_dep_vide">Veillez saisir un numéro civique pour l\'adresse de départ.</string>
    <string name="toast_rue_dep_vide">Veillez saisir une rue pour l\'adresse de départ.</string>
    <string name="toast_rue_dep_invalide">La rue de l\'adresse de départ n\'est pas valide.</string>
    <string name="toast_ville_dep_vide">Veillez saisir une ville pour l\'adresse de départ.</string>
    <string name="toast_ville_dep_invalide">La ville de l\'adresse de départ n\'est pas valide.</string>
    <string name="toast_code_postal_dep_vide">Veillez saisir un code postal pour l\'adresse de départ.</string>
    <string name="toast_code_postal_dep_invalide">Le code postal de l\'adresse de départ n\'est pas valide.</string>
    <string name="toast_num_civ_arr_vide">Veillez saisir un numéro civique pour l\'adresse d\'arrivée.</string>
    <string name="toast_rue_arr_vide">Veillez saisir une rue pour l\'adresse d\'arrivée.</string>
    <string name="toast_rue_arr_invalide">La rue de l\'adresse d\'arrivée n\'est pas valide.</string>
    <string name="toast_ville_arr_vide">Veillez saisir une ville pour l\'adresse d\'arrivée.</string>
    <string name="toast_ville_arr_invalide">La ville de l\'adresse d\'arrivée n\'est pas valide.</string>
    <string name="toast_code_postal_arr_vide">Veillez saisir un code postal pour l\'adresse d\'arrivée.</string>
    <string name="toast_code_postal_arr_invalide">Le code postal de l\'adresse d\'arrivée n\'est pas valide.</string>
    <string-array name="type_parcour_array">
        <item>Ponctuel</item>
        <item>Périodique</item>
    </string-array>
    <string name="btn_envoie_courriel">Envoyer!</string>
    <string name="mdp_oublie">Mot de passe oublié?</string>
    <string name="courriel_envoye">Le courriel contenant votre mot de passe a été envoyé.</string>
</resources>