<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.cartravel.CreationCompteActivity"
    android:gravity="center"
    android:orientation="vertical" >
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_username"
        android:id="@+id/new_username"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_confirmer_username"
        android:id="@+id/new_username_confirmation"
        android:inputType="textEmailAddress"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_pseudo"
        android:id="@+id/new_pseudo"
        android:inputType="textPersonName"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password"
        android:id="@+id/new_password"
        android:inputType="textPassword"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_confirmer_password"
        android:id="@+id/new_password_confirmation"
        android:inputType="textPassword"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_creer_compte"
        android:onClick="CreerCompte" />

</LinearLayout>
