<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical" >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rdbConducteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chck_cond" />
        <RadioButton
            android:id="@+id/rdbPassager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chck_pass" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/lbl_date_heure" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txtHeure"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_h" />

        <EditText
            android:id="@+id/txtMinute"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:inputType="datetime" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_type_parcour" />

    <Spinner
        android:id="@+id/type_parcour_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>