<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.cartravel.MDPOublieActivity" >
    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/mdp_oublie"
         android:textSize="40sp"
         android:layout_marginBottom="100dp" />
     
	 <EditText
        android:id="@+id/courriel_envoie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/courriel_envoie_verif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_confirmer_username"
        android:inputType="textEmailAddress" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EnvoieCourriel"
        android:text="@string/btn_envoie_courriel" />
</LinearLayout>
